salesforce-sandbox/force-app/main/default/objects/Bandeja_Contable_Config__mdt/Bandeja_Contable_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuración de la Bandeja Contable por org: conexión con la API de Google (Cloud Run) y tamaño máximo de archivo. Sandbox apunta al entorno dev de Google y producción al entorno prod.</description>
    <label>Bandeja Contable Config</label>
    <pluralLabel>Bandeja Contable Config</pluralLabel>
</CustomObject>