salesforce-sandbox/force-app/main/default/objects/Bandeja_Contable_Config__mdt/fields/Certificate_Name__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Name__c</fullName>
    <label>Certificate Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>