salesforce-sandbox/force-app/main/default/objects/Bandeja_Contable_Config__mdt/fields/Cloud_Run_URL__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Run_URL__c</fullName>
    <label>Cloud Run URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>