salesforce-sandbox/force-app/main/default/objects/Bandeja_Contable_Config__mdt/fields/Modo_simulado__c.field-meta.xml
<CustomField>
    <fullName>Modo_simulado__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Activado: no se llama a Google, la subida y la sincronización se simulan.</description>
    <label>Modo simulado</label>
    <type>Checkbox</type>
</CustomField>