salesforce-sandbox/force-app/main/default/objects/Bandeja_Contable_Config__mdt/fields/SA_Client_Email__c.field-meta.xml
<CustomField>
    <fullName>SA_Client_Email__c</fullName>
    <label>Service Account (caller)</label>
    <length>150</length>
    <type>Text</type>
</CustomField>