salesforce-sandbox/force-app/main/default/objects/Bandeja_Contable_Config__mdt/fields/Tamano_maximo_MB__c.field-meta.xml
<CustomField>
    <fullName>Tamano_maximo_MB__c</fullName>
    <label>Tamaño máximo (MB)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>